added fountain image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
+  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
       integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs="
@@ -27,8 +30,8 @@
         <div class="container">
           <div class="nav-wrapper">
             <a href="#" class="brand-logo">NH</a>
-            <a href="#" data-target="mobile-nav" class="sidenav-trigger"
-              ><i class="material-icons">menu</i></a
+            <a href="#" data-target="mobile-nav" class="sidenav-trigger btn-floating btn-large  pulse"
+              ><i class="material-icons ">menu</i></a
             >
             <ul class="right hide-on-med-and-down">
               <li>
@@ -109,7 +112,7 @@
         <li>
           <!--<img src="https://image.ibb.co/mn1egc/resort2.jpg" alt="">-->
           <!--<img src="images/wave.jpg" alt="wave-pic"  height="200" width="200"/>-->
-          <img src="images/landing16.jpg" alt="wave-pic"  height="200" width="200"/>
+          <img src="images/fountainimage.jpeg" alt="wave-pic"  height="200" width="200"/>
           <div class="caption center-align">
             <h2>Mental Health, Never Be Afraid to Reinvent Yourself! </h2>
             <h5 class="light grey-text text-lighten-3 hide-on-small-only">
@@ -169,6 +172,18 @@
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                 Quidem, velit.
               </p>
+                <!-- Dropdown Trigger -->
+  <a class='dropdown-trigger btn' href='#' data-target='dropdown1'>Drop Me!</a>
+
+  <!-- Dropdown Structure -->
+  <ul id='dropdown1' class='dropdown-content'>
+    <li><a href="#!">one</a></li>
+    <li><a href="#!">two</a></li>
+    <li class="divider" tabindex="-1"></li>
+    <li><a href="#!">three</a></li>
+    <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
+    <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
+  </ul>
             </div>
           </div>
           <div class="col s12 m4">
@@ -185,11 +200,28 @@
           <div class="col s12 m4">
             <div class="card-panel">
               <i class="material-icons medium teal-text">local_pharmacy</i>
-              <h5>TELETHERAPY</h5>
+              <h5>TELE THERAPY</h5>
               <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                 Quidem, velit.
               </p>
+
+              <ul class="collapsible">
+                <li>
+                  <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
+                  <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                </li>
+                <li>
+                  <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
+                  <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                </li>
+                <li>
+                  <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
+                  <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                </li>
+              </ul>
+                    
+
             </div>
           </div>
         </div>
@@ -392,7 +424,7 @@
       <div class="container">
         <div class="row">
           <div class="col s12 m6">
-            <div class="card-panel teal white-text center">
+            <div class="card-panel teal white-text center ">
               <i class="material-icons small">attachment</i>
               <h4>CLIENT FORMS</h4>
                 <p>
@@ -428,7 +460,7 @@
               
             </ul>-->
           </div>
-          <div class="col s12 m6">
+          <div class="col s12 m6 hoverable" >
 
             <ul class="collection with-header  teal white-text">
                 <li class="collection-header teal white-text">
