added 2nd# fountain image

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <li>
           <!-- <img src="https://image.ibb.co/hbEMux/resort1.jpg" alt="">-->
           <!--<img src="images/brain.jpg" alt="brain-pic"  height="200" width="200" />-->
-          <img src="images/landing15.jpg" alt="brain-pic"  height="200" width="200" />
+          <img src="images/landing15.jpg" alt="light"  height="200" width="200" />
           <div class="caption left-align ">
             <h2>The Time is Now to Put Yourself First. Get Happy, Start Therapy Today!</h2>
             <h5 class="light grey-text text-lighten-3 hide-on-small-only">
@@ -112,7 +112,7 @@
         <li>
           <!--<img src="https://image.ibb.co/mn1egc/resort2.jpg" alt="">-->
           <!--<img src="images/wave.jpg" alt="wave-pic"  height="200" width="200"/>-->
-          <img src="images/fountainimage.jpeg" alt="wave-pic"  height="200" width="200"/>
+          <img src="images/fountainimage.jpeg" alt="fountain"  height="200" width="200"/>
           <div class="caption center-align">
             <h2>Mental Health, Never Be Afraid to Reinvent Yourself! </h2>
             <h5 class="light grey-text text-lighten-3 hide-on-small-only">
@@ -123,7 +123,7 @@
         </li>
         <li>
           <!-- <img src="https://image.ibb.co/mbCVnH/resort3.jpg" alt="">-->
-          <img src="images/landing1.jpg" alt="lift-pic" height="200" width="200" />
+          <img src="images/fountainimage.jpeg" alt="fountain" height="200" width="200" />
           <div class="caption right-align">
             <h2>You Don't Have to Wait weeks for an Appointment. Start therapy Today! </h2>
             <h5 class="light grey-text text-lighten-3 hide-on-small-only">
